--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
     <title>Document</title>
 </head>
 <body class="fira-sans-medium">
-    <header class="banner-box all-margin">
+    <header class=" all-margin">
 
 
         <nav class="nav-style">
@@ -18,6 +18,21 @@
             <a href="#"><button>Sign In</button></a>
 
         </nav>
+
+        <div class="banner-box">
+            <div class="banner-content">
+                <h4 class="sub-title">Bangladesh 2.0</h4>
+                <h2 class="title">
+                    Idea , innovation ,<br>vision and challenges in <br>New Bangladesh.
+                </h2>
+                <a href="#"><button class="button-common-hover">Explore New Bangladesh</button></a>
+
+            </div>
+            <div class="banner-img">
+                <img src="./assets/hero.png" alt="" width="447px" height="400px">
+
+            </div>
+        </div>
 
 
     </header>
