--- a/index.html
+++ b/index.html
@@ -74,6 +74,40 @@
 
         </section>
 
+
+
+
+        <section class="recent-news">
+            <div class="news">
+                <h2>Recent News</h2>
+                <p>Bangladesh 2.0 aims to redefine the nation’s trajectory by embracing cutting-edge technology, promoting inclusive growth, and ensuring sustainability. With initiatives in renewable energy, digital transformation, and robust infrastructure, the country is set to become a global model of development.</p>
+            </div>
+
+
+
+            <div class="news-concent-box">
+                <img src="./assets/satelite.png" alt="">
+
+
+                <div class="content">
+
+                    <h1>Bangladesh Launches New Satellite</h1>
+                    <img src="./assets/al-jazeera.png" alt="">
+                    <p> <span>Date: 05/01/2025</span>  <span>Time: 10.25 PM</span></p>
+                    <p>Not until the creation and maintenance of decent conditions of life for all people are recognized and accepted as a common obligation of all people and all countries—not until then shall we,
+                        with a certain degree of justification, be able to speak of humankind as civilized</p>
+                </div>
+
+
+            </div>
+
+        </section>
+
+
+
+
+
+
     </main>
 
 
