--- a/index.html
+++ b/index.html
@@ -136,6 +136,34 @@
 
 
 
+        <section class="Donate">
+            <h1>Donate Today</h1>
+            <p>Bangladesh 2.0 aims to redefine the nation’s trajectory by embracing cutting-edge technology, promoting inclusive growth, and ensuring sustainability. With initiatives in renewable energy, digital transformation, and robust infrastructure.</p>
+            <div class="amount-container">
+                <div>
+                    <h2> 100 Taka</h2>
+                </div>
+
+
+                  <div style="background-color:#C6E4D6;">
+                    <h2> 200 Taka</h2>
+                  </div>
+
+
+                <div>
+                    <h2> 500 Taka</h2>
+                </div>
+                <div>
+                    <h2> 1000 Taka</h2>
+                </div>
+            </div>
+
+          <input type="text" placeholder="Other Amount (Taka)"> 
+          <br> <a href="#"><button class="button-common-hover button-common-style">Done Now</button></a>
+
+
+        </section>
+
 
 
 
